* Nov 6 2000 hship

Begin organizing things to support the distributed release.